<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdp.swiftwallet.presentation.cryptoGraph.CryptoGraphActivity">

    <com.github.mikephil.charting.charts.CandleStickChart
        android:id="@+id/candle_stick_chart"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/primary_dark"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        />

    <TextView
        android:id="@+id/idCurrencyToShowName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/candle_stick_chart"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
        android:minHeight="20dp"
        android:text="TextView222"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <Spinner
        android:id="@+id/idInterval"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idCurrencyToShow"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="Width of a candle"
        android:textColorHint="@color/grey" />

    <Spinner
        android:id="@+id/idCurrencyToShow"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idCurrencyToShowName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="Cryptocurrency to show"
        android:textColorHint="@color/grey" />

    <ProgressBar
        android:id="@+id/idProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>