<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.sdp.swiftwallet.presentation.cryptoGraph.CryptoValuesActivity">

    <EditText
        android:id="@+id/idCryptoSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:hint="@string/search_crypto_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/idSpinnerShowAll"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idCryptoSearch"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:hint="Show all or only USDT"
        android:textColorHint="@color/grey" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idCryptoCurrencies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idSpinnerShowAll" />

    <ProgressBar
        android:id="@+id/idProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />




</RelativeLayout>